--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Prototype - Home</title>
+
+    <!-- Bootstrap provides a responsive layout which allows the page to automatically rearrange itself from a desktop to a mobile view
+     also provides some clean ready made components. https://getbootstrap.com/ -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <meta name="description" content="prototype streaming web interface - UED100 Assessment 2"/>
+    <link rel="stylesheet" href="styles.css"/>
+
 </head>
 <body>
     
+
+    <!-- bootstrap JS for collapse features -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    <script src ="main.js"></script>
 </body>
 </html>
