--- a/index.html
+++ b/index.html
@@ -12,7 +12,32 @@
     <link rel="stylesheet" href="styles.css"/>
 
 </head>
-<body>
+<body class="bg-dark text-light">
+    <!-- Skip to main content link for accessibility
+     reference: https://www.w3.org/WAI/WCAG21/quickref/#bypass-blocks-->
+    <a class="skip-link" href="#main">Skip to main content</a>
+
+    <!-- Bootstrap navigation bar that expands on large screens -->
+    <header class="navbar navbar-expand-lg navbar-dark bg-dark py-3"
+    <div class="container">
+        <a class="navbar-brand" href="#">Netflix</a>
+        <nav id="mainNav" class="collapse navbar-collapse">
+        </nav>
+        </div>
+    </header>
+
+    <!-- Main content area with tabindex and aria-labelledby for accessibility -->
+    <main id="main" class ="container py-4" tabindex ="-1" aria-labelledby="main-heading">
+        <h1 id="main-heading" class="visually-hidden">Netflix Prototype</h1>
+    </main>
+
+    <!-- Simple footer -->
+    <footer class="py-4 border-top border-secondary">
+        <div class="container">
+            <small>Prototype build</small>
+        </div>
+    </footer>
+        
     
 
     <!-- bootstrap JS for collapse features -->
