--- a/account.html
+++ b/account.html
@@ -12,8 +12,8 @@
     <header class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="netflix-logo.png" alt="Netflix Logo" width="40" height="24">
-                <span class="ms-2">Netflix Prototype</span>
+                <img src="assets/logo.png" alt="Netflix Logo" width="60" height="36">
+                <span class="ms-2 text-muted">Netflix Prototype</span>
             </a>
         </div>
     </header>
