added movie descriptions and titles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="#">
         <!-- Brand logo image with alt text for accessibility-->
-            <img src="assets/logo.png" alt="brand logo" width="60" height="36" />
+            <img src="assets/logo.png" alt="brand logo" width="80" height="50" />
             <span class="ms-2 text-muted">Netflix Prototype</span>
         </a>
 
@@ -148,14 +148,14 @@
                 </div>
             </div>
            
-            <!-- descriptions recieved from https://www.themoviedb.org/ -->
+            <!-- descriptions and posters retrieved from https://www.themoviedb.org/ -->
             <div id="grid" class="row g-3">
                 <div class="col-6 col-sm-4 col-md-3">
                     <div class="poster-card-small" tabindex="0">
                         <img src="assets/poster1.jpg" alt="poster 1" loading="lazy" />
                         <div class = "card-details">
-                            <h4 class="h6 mb-1">Happy Gilmore</h4> <!-- title for list view -->
-                            <p class="small movie-description mb-2 d-none d-sm-block"> Happy Gilmore isn't done with golf — not by a long shot. Since his retirement after his first Tour Championship win, Gilmore returns to finance his daughter's ballet classes. </p> <!-- description for list view -->
+                            <h4 class="h6 mb-1">Happy Gilmore</h4> 
+                            <p class="small movie-description mb-2 d-none d-sm-block">Happy Gilmore isn't done with golf — not by a long shot. Since his retirement after his first Tour Championship win, Gilmore returns to finance his daughter's ballet classes. </p> 
                         </div>
                     </div>
                 </div>
@@ -164,8 +164,8 @@
                     <div class="poster-card-small" tabindex="0">
                         <img src="assets/poster2.jpg" alt="poster 2" loading="lazy" />
                         <div class = "card-details">
-                            <h4 class="h6 mb-1">Poster 2 Title</h4> <!-- title for list view -->
-                            <p class="small movie-description mb-2 d-none d-sm-block"> add movie description here </p> <!-- description for list view -->
+                            <h4 class="h6 mb-1">Extraction 2</h4> 
+                            <p class="small movie-description mb-2 d-none d-sm-block">Back from the brink of death, highly skilled commando Tyler Rake takes on another dangerous mission: saving the imprisoned family of a ruthless gangster. </p> 
                         </div>
                     </div>
                 </div>
@@ -174,8 +174,8 @@
                     <div class="poster-card-small" tabindex="0">
                         <img src="assets/poster3.jpg" alt="poster 3" loading="lazy" />
                         <div class = "card-details">
-                            <h4 class="h6 mb-1">Poster 3 Title</h4> <!-- title for list view -->
-                            <p class="small movie-description mb-2 d-none d-sm-block"> add movie description here </p> <!-- description for list view -->
+                            <h4 class="h6 mb-1">Frankenstein</h4> 
+                            <p class="small movie-description mb-2 d-none d-sm-block">Dr. Victor Frankenstein, a brilliant but egotistical scientist, brings a creature to life in a monstrous experiment that ultimately leads to the undoing of both the creator and his tragic creation. </p> 
                         </div>
                     </div>
                 </div>
@@ -184,8 +184,8 @@
                     <div class="poster-card-small" tabindex="0">
                         <img src="assets/poster4.jpg" alt="poster 4" loading="lazy" />
                         <div class = "card-details">
-                            <h4 class="h6 mb-1">Poster 4 Title</h4> <!-- title for list view -->
-                            <p class="small movie-description mb-2 d-none d-sm-block"> add movie description here </p> <!-- description for list view -->
+                            <h4 class="h6 mb-1">The Equalizer 3</h4> 
+                            <p class="small movie-description mb-2 d-none d-sm-block">Robert McCall finds himself at home in Southern Italy but he discovers his friends are under the control of local crime bosses. As events turn deadly, McCall knows what he has to do: become his friends' protector by taking on the mafia. </p> 
                         </div>
                     </div>
                  </div>
@@ -194,8 +194,8 @@
                     <div class="poster-card-small" tabindex="0">
                         <img src="assets/poster5.jpg" alt="poster 5" loading="lazy" />
                         <div class = "card-details">
-                            <h4 class="h6 mb-1">Poster 5 Title</h4> <!-- title for list view -->
-                            <p class="small movie-description mb-2 d-none d-sm-block"> add movie description here </p> <!-- description for list view -->
+                            <h4 class="h6 mb-1">Carry-On</h4> 
+                            <p class="small movie-description mb-2 d-none d-sm-block">An airport security officer races to outsmart a mysterious traveler forcing him to let a dangerous item slip onto a Christmas Eve flight. </p> 
                         </div>
                     </div>
                 </div>
@@ -204,8 +204,8 @@
                     <div class="poster-card-small" tabindex="0">
                         <img src="assets/poster6.jpg" alt="poster 6" loading="lazy" /> 
                         <div class = "card-details">
-                            <h4 class="h6 mb-1">Poster 6 Title</h4> <!-- title for list view -->
-                            <p class="small movie-description mb-2 d-none d-sm-block"> add movie description here </p> <!-- description for list view -->
+                            <h4 class="h6 mb-1">The Accountant</h4> 
+                            <p class="small movie-description mb-2 d-none d-sm-block">As a math savant uncooks the books for a new client, the Treasury Department closes in on his activities and the body count starts to rise. </p> 
                         </div>
                     </div>
                 </div>
@@ -214,8 +214,8 @@
                     <div class="poster-card-small" tabindex="0">
                         <img src="assets/poster7.jpg" alt="poster 7" loading="lazy" />
                         <div class = "card-details">
-                            <h4 class="h6 mb-1">Poster 7 Title</h4> <!-- title for list view -->
-                            <p class="small movie-description mb-2 d-none d-sm-block"> add movie description here </p> <!-- description for list view -->
+                            <h4 class="h6 mb-1">Get Hard</h4> 
+                            <p class="small movie-description mb-2 d-none d-sm-block">When obscenely rich hedge-fund manager James is convicted of fraud and sentenced to a stretch in San Quentin, the judge gives him one month to get his affairs in order. Knowing that he won't survive more than a few minutes in prison on his own, James desperately turns to Darnell-- a black businessman who's never even had a parking ticket -- for help. As Darnell puts James through the wringer, both learn that they were wrong about many things, including each other. </p> 
                         </div>
                     </div>
                 </div>
@@ -224,8 +224,8 @@
                     <div class="poster-card-small" tabindex="0">
                         <img src="assets/poster8.jpg" alt="poster 8" loading="lazy" />
                         <div class = "card-details">
-                            <h4 class="h6 mb-1">Poster 8 Title</h4> <!-- title for list view -->
-                            <p class="small movie-description mb-2 d-none d-sm-block"> add movie description here </p> <!-- description for list view -->
+                            <h4 class="h6 mb-1">Horrible Bosses</h4> 
+                            <p class="small movie-description mb-2 d-none d-sm-block">For Nick, Kurt and Dale, the only thing that would make the daily grind more tolerable would be to grind their intolerable bosses into dust. Quitting is not an option, so, with the benefit of a few-too-many drinks and some dubious advice from a hustling ex-con, the three friends devise a convoluted and seemingly foolproof plan to rid themselves of their respective employers... permanently. </p>
                         </div>
                     </div>
                 </div>
