--- a/account.html
+++ b/account.html
@@ -1,3 +1,6 @@
+<!-- de Kleyn, Joel UED100 User Experience Design ID: A00174772 -->
+
+<!--------------------- Very simple prototype account page ---------------------->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,38 +12,161 @@
 </head>
 <body class="bg-dark text-light">
 
+<!-- simple header-->
     <header class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="assets/logo.png" alt="Netflix Logo" width="60" height="36">
+                <img src="assets/logo.png" alt="Netflix Logo" width="80" height="50">    <!-- edited size to match main page -->
                 <span class="ms-2 text-muted">Netflix Prototype</span>
             </a>
         </div>
     </header>
 
-    <main class="container py-5">
-        <h1 class="h3 mb-4">Account</h1>
+<!------------------------------------------------------- 2 column profile page ------------------------------------------
 
-        <!-- prfile information and settings-->
-        <div class="card bg-secondary p-4"
-            <h2 class="h5">Profile Information<h2>
-                <p class="small text-muted">In a full implementation, your saved data would appear here.</p>
+--------------------------------------------------------------- Column 1: profile summary -------------------------------------------------->
+<main id="main" class="container py-4" tabindex="-1" aria-lebelledby="acount-heading">
+    <h1 id="account-heading" class="h3 mb-4">Account Settings</h1>
 
-                <hr>
+    <div class="row g-4">
+        <section class="col-md-4" aria-label="Profile summary">
+            <div class="account-card h-100">
+                <div class="d-flex align-items-center mb-3">
+                    <img src="assets/profilepic.png" alt="Profile Picture" class="profile-photo me-3">
+                    <div>
+                        <h2 class="h5 mb-1">Torrens user</h2>
+                        <p class="small text-muted mb-0">Member since 2025</p>
+                    </div>
+                </div>
 
-                <h2 class="h5">Settings</h2>
-                <ul>
-                    <li class="mb-2">Change Password</li>
-                    <li class="mb-2">Manage Subscriptions</li>
-                    <li class="mb-2">Privacy Settings</li>
-                </ul>
-        </div>
-    </main>
+                <dl class="small mb-4">
+                    <div class="d-flex justify-content-between mb-1">
+                        <dt class="text-muted">Email</dt>
+                        <dd class="mb-0">user@torrens.com</dd>
+                    </div>
+                    <div class="d-flex justify-content-between mb-1">
+                        <dt class="text-muted">Plan</dt>
+                        <dd class="mb-0">
+                            <span class="badge badge-plan">Standard</span>
+                        </dd>
+                    </div>
+                    <div class="d-flex justify-content-between mb-1">
+                        <dt class="text-muted">Language</dt>
+                        <dd class="mb-0">English</dd>
+                    </div>
+                </dl>
 
-    <footer class="py-4 border-top border-secondary"
-        <div class="container"
+                <button type="button" class="btn btn-outline-light btn-sm w-100 mb-2">Edit profile</button>
+                <button type="button" class="btn btn-outline-danger btn-sm w-100">Manage profiles</button>
+            </div>
+        </section>
+<!--------------------------------------------------------------- Column 2: account settings & details -------------------------------------------------->
+        <section class="col-md-8">
+
+            <section class="account-card h-100 mb-3" aria-label ="Account details">
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                    <h2 class ="h5 mb-0">Account Details</h2>
+                    <span class="badge bg-secondary small"> Read-only (prototype)</span>
+                </div>
+                <p class="small text-muted">In a full implementation this section would allow you to edit your personal detals</p>
+
+                <hr class="border-secondary">
+                <div class="row small gy-2">
+                    <div class="col-sm-6">
+                        <span class="text-muted d-block">Next billing date</span>
+                        <span>3 Dec 2025</span>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <span class="text-muted d-block">Payment method</span>
+                        <span>Visa **** 1234</span>
+                    </div>
+                    <div class="col-sm-6">
+                        <span class="text-muted d-block">Date of birth</span>
+                        <span>3 Dec 1900</span>
+                    </div>
+
+                    <div class="col-sm-6 mt-2">
+                        <span class="text-muted d-block">Phone number</span>
+                        <span>123 456 789</span>
+                    </div>
+
+                    <div class="col-sm-6 mt-2">
+                        <span class="text-muted d-block">Location</span>
+                        <span>Australia</span>
+                    </div>
+                </div>
+            </section>
+        </section>
+
+        <!---------------------------------------- Playback and accessibility settings ----------------------->
+        <section class="account-card mb-3" aria-label="playback and accessibility">
+            <h2 class="h5 mb-2">Playback & accessibility</h2>
+            <p class="small text-muted">These controls would allow you to change how the content appears across your devices</p>
+            <div class="small">   
+                <div class="d-flex justify-content-between align-items-start mb-3">
+                    <div>
+                        <strong>Autoplay next episode</strong>
+                        <div class="text-muted">Automatically play the next episode</div>
+                    </div>
+                    <button type="button" class="toggle-pill" aria-pressed="true" aria-label="autoplay next episode setting">On</button>
+                </div>
+
+                <div class="d-flex justify-content-between align-items-start mb-3">
+                    <div class="me-3">
+                        <strong>Subtitles</strong>
+                        <div class="text-muted">Manage subtitle language or turn them off</div>
+                    </div>
+                </div>
+                <div class="subtitle-select-wrapper">
+                    <label for="subtitleSelect" class="visually-hidden">Subtitle language</label>
+                    <select id="subtitleSelect" class="form-select form-select-sm bg-dark text-light border-secondary">
+                        <option value="off">Off</option>
+                        <option value="english" selected>English</option>
+                        <option value="spanish">Spanish</option>
+                        <option value="french">French</option>
+                        <option value="german">German</option>
+                        <option value="chinese">Chinese</option>
+                    </select>
+                </div>
+
+                <div class="d-flex justify-content-between align-items-start">
+                    <div>
+                        <strong>Data saver</strong>
+                        <div class="text-muted">Reduce data usage</div>
+                    </div>
+                        <button type="button" class="toggle-pill" aria-pressed="false" aria-label="data saver setting">Off</button>
+                </div>
+            </div>
+        </section>
+
+<!--------------------------------------------------- Security and Privacy ---------------------------------------------->
+    <section class="account-card" aria-label="security and privacy">
+        <h2 class="h5 mb-2">Security & Privacy</h2>
+        <p class="small text-muted">Manage your security settings and privacy preferences</p>
+        <ul class="list-unstyled small mb-3">
+            <li class="mb-2">
+                <strong>Two-step verification</strong><br>
+                <span class="text-muted">Add an extra layer of security to your account</span><br>
+                <span class="text-warning">Status: Not set up </span>
+            </li>
+            <li class="mb-2">
+                <strong>Watch history</strong><br>
+                <span class="text-muted">View and manage your watch history</span><br>
+            </li>
+        </ul>
+
+        <button type="button" class="btn btn-outline-light btn-sm">Manage Security Settings</button>
+    </section>
+</main>
+
+    <footer class="py-4 border-top border-secondary">
+        <div class="container">
             <small>Prototype build</small>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
