change form status colours to enhance readability

--- a/account.html
+++ b/account.html
@@ -1,6 +1,6 @@
 <!-- de Kleyn, Joel UED100 User Experience Design ID: A00174772 -->
 
-<!--------------------- Very simple prototype account page ---------------------->
+<!--------------------- account page ---------------------->
 <!DOCTYPE html>
 <html lang="en">
 <head>
